--- a/static/global.css
+++ b/static/global.css
@@ -118,6 +118,22 @@ div.content a.linkWidget em {
   color: #333;
 }
 
+div.content .video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+div.content .video-container iframe, div.content .video-container object, div.content .video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media (min-width: 728px) {
   body {
     font-size: 21px;
